--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -27,18 +27,16 @@ jobs:
       - name: Clean Build Directory
         run: |
           make clean
-          rm -rf build_dir staging_dir
+          rm -rf build_dir staging_dir tmp
 
       - name: Cache Tools and Kernel
         id: cache-tools-kernel
         uses: actions/cache@v4
         env:
-          cache-name: "cache-vm5-${{ matrix.build_env.tag }}-${{ matrix.build_env.pkgarch}}-${{ matrix.build_env.target}}-${{ matrix.build_env.subtarget}}-${{ github.run_id }}"
+          cache-name: "cache-${{ matrix.build_env.tag }}-${{ matrix.build_env.pkgarch}}-${{ github.run_id }}"
         with:
           path: "**"
           key: ${{ runner.os }}-build-${{ env.cache-name }}
-          restore-keys: |
-            ${{ runner.os }}-build-cache-${{ matrix.build_env.tag }}-${{ matrix.build_env.pkgarch }}-
 
       - name: Building kernel and tools
         run: |
@@ -64,8 +62,9 @@ jobs:
           echo "    > make toolchain/install"
           make toolchain/install -j$(nproc)
 
-          echo "    > make target/linux/compile"
-          make target/linux/compile -j$(nproc) V=s
+      - name: Rebuild Kernel
+        run: |
+          make target/linux/{clean,compile} -j$(nproc) V=s
 
           VERMAGIC=$(cat ./build_dir/target-*/linux-*/linux-*/.vermagic 2>/dev/null || echo "MISSING")
           VERMAGIC_EXPECTED=${{ matrix.build_env.vermagic }}
