--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -27,14 +27,8 @@ jobs:
           fetch-depth: 0
 
       - name: Install Dependencies
-        run: |
-         sudo apt update && sudo apt install -y \
-         build-essential libncurses5-dev libncursesw5-dev \
-         gawk flex bison zlib1g-dev wget unzip file python3 \
-         libpam0g-dev liblzma-dev libsnmp-dev
-
-
-
+        run: npm install
+        
       - name: Clean Build Directory
         run: |
           make clean
@@ -59,13 +53,7 @@ jobs:
          sed -i 's/snapshots/23.05/g' feeds.conf.default
          ./scripts/feeds update -a
          ./scripts/feeds install -a
-
-      - name: Configure Build
-        run: |
-         export TERM=xterm
-         make defconfig
-         make oldconfig
-
+         
       - name: Building Kernel and Tools
         run: |
           echo "Building for: ${{ matrix.build_env.pkgarch}}, target: ${{ matrix.build_env.target}}, subtarget: ${{ matrix.build_env.subtarget}}"
