--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -24,8 +24,14 @@ jobs:
         with:
           repository: openwrt/openwrt
           ref: v${{ matrix.build_env.tag }}
-          fetch-depth: 0
-        
+          fetch-depth: 1
+
+      - name: Install Dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y build-essential libncurses5-dev libncursesw5-dev \
+          gawk flex bison zlib1g-dev wget unzip file python3
+
       - name: Clean Build Directory
         run: |
           make clean
@@ -34,20 +40,20 @@ jobs:
       - name: Cache Tools and Kernel
         id: cache-tools-kernel
         uses: actions/cache@v4
-        env:
-          cache-name: "cache-${{ matrix.build_env.tag }}-${{ matrix.build_env.pkgarch}}-${{ github.run_id }}"
         with:
           path: "**"
-          key: ${{ runner.os }}-build-${{ env.cache-name }}
-          
-      - name: Building Kernel and Tools
+          key: ${{ runner.os }}-build-${{ matrix.build_env.tag }}-${{ matrix.build_env.pkgarch }}
+
+      - name: Update Feeds
         run: |
-          echo "Building for: ${{ matrix.build_env.pkgarch}}, target: ${{ matrix.build_env.target}}, subtarget: ${{ matrix.build_env.subtarget}}"
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
 
-          wget https://downloads.openwrt.org/releases/${{ matrix.build_env.tag }}/targets/${{ matrix.build_env.target}}/${{ matrix.build_env.subtarget}}/feeds.buildinfo -O feeds.conf
-          echo "src-git awgopenwrt https://github.com/yury-sannikov/awg-openwrt.git" >> ./feeds.conf
-          ./scripts/feeds update && ./scripts/feeds install -a
+      - name: Configure Build
+        run: make defconfig
 
+      - name: Download Build Configs
+        run: |
           wget https://downloads.openwrt.org/releases/${{ matrix.build_env.tag }}/targets/${{ matrix.build_env.target}}/${{ matrix.build_env.subtarget}}/config.buildinfo -O .config
           echo "CONFIG_PACKAGE_kmod-amneziawg=m" >> .config
           echo "CONFIG_PACKAGE_amneziawg-tools=y" >> .config
@@ -55,9 +61,11 @@ jobs:
           echo "CONFIG_PACKAGE_kmod-crypto-lib-chacha20=m" >> .config
           echo "CONFIG_PACKAGE_kmod-crypto-lib-chacha20poly1305=m" >> .config
           echo "CONFIG_PACKAGE_kmod-crypto-chacha20poly1305=m" >> .config
-
           make defconfig
 
+      - name: Build Tools and Toolchain
+        run: |
+          set -e
           echo "    > make tools/install"
           make tools/install -j$(nproc)
 
@@ -66,6 +74,7 @@ jobs:
 
       - name: Rebuild Kernel
         run: |
+          set -e
           make target/linux/{clean,compile} -j$(nproc) V=s
 
           VERMAGIC=$(cat ./build_dir/target-*/linux-*/linux-*/.vermagic 2>/dev/null || echo "MISSING")
@@ -83,12 +92,14 @@ jobs:
 
       - name: Build AmneziaWG
         run: |
-          make package/kmod-amneziawg/{clean,download,prepare,compile} V=s || true
+          set -e
+          make package/kmod-amneziawg/{clean,download,prepare,compile} V=s
           make package/luci-app-amneziawg/{clean,download,prepare,compile} V=s
           make package/amneziawg-tools/{clean,download,prepare,compile} V=s
 
-      - name: Prepare artifacts
+      - name: Prepare Artifacts
         run: |
+          set -e
           tag_name=${{ github.ref_name }}
           mkdir -p awgrelease
           postfix="${tag_name}_v${{ matrix.build_env.tag }}_${{ matrix.build_env.pkgarch}}_${{ matrix.build_env.target}}_${{ matrix.build_env.subtarget}}"
